--- a/app.yaml
+++ b/app.yaml
@@ -17,6 +17,10 @@ handlers:
   static_files: redirect.html
   upload: redirect\.html
 
+- url: /exp.html
+  static_files: exp.html
+  upload: exp\.html
+
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
